--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -1,297 +1,243 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
+    android:id="@+id/main_activity_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingTop="18dp"
-    android:paddingBottom="@dimen/activity_vertical_margin">
+    android:background="@color/gray7">
 
-    <ProgressBar
-        android:id="@+id/progress_bar"
-        style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:indeterminateOnly="true"/>
-
-    <!-- Coordinates -->
     <LinearLayout
-        android:id="@+id/coordinates_layout"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:background="@color/gray1"
+        android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/coordinates_latitude_value_text_view"
-            style="@style/ValueTextViewTop"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+        <!-- Coordinates -->
+        <RelativeLayout
+            android:id="@+id/coordinates_layout"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
             android:layout_weight="1"
-            android:gravity="end"
-            tools:text="+100° 60' 60.00'' N"/>
+            android:background="@color/gray1"
+            android:elevation="2.0dp"
+            android:gravity="center">
 
-        <ImageView
-            android:layout_width="36dp"
-            android:layout_height="36dp"
-            android:layout_margin="12dp"
-            android:contentDescription="@string/coordinates"
-            android:src="@drawable/ic_my_location_black_24dp"
-            android:tint="@color/darkGray"/>
+            <android.support.v4.view.ViewPager
+                android:id="@+id/coordinates_view_pager"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingBottom="@dimen/activity_vertical_margin"
+                android:paddingEnd="@dimen/activity_horizontal_margin"
+                android:paddingStart="@dimen/activity_horizontal_margin">
 
-        <TextView
-            android:id="@+id/coordinates_longitude_value_text_view"
-            style="@style/ValueTextViewTop"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="start"
-            tools:text="+100° 60' 60.00'' W"/>
+                <com.itsronald.widget.ViewPagerIndicator
+                    android:id="@+id/view_pager_indicator"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="bottom|center_horizontal"
+                    android:gravity="center_vertical"
+                    app:selectedDotColor="@color/gray12"
+                    app:unselectedDotColor="@color/gray4"/>
 
-    </LinearLayout>
+            </android.support.v4.view.ViewPager>
 
-    <!-- First row -->
-    <LinearLayout
-        style="@style/StatRow"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:baselineAligned="false"
-        android:orientation="horizontal">
+            <ProgressBar
+                android:id="@+id/progress_bar"
+                android:layout_width="26dp"
+                android:layout_height="26dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentStart="true"
+                android:layout_gravity="center"
+                android:indeterminateOnly="true"
+                android:layout_margin="16dp"/>
+
+            <ImageView
+                android:id="@+id/screen_lock_switch"
+                android:layout_width="58dp"
+                android:layout_height="58dp"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentEnd="true"
+                android:background="?android:attr/selectableItemBackgroundBorderless"
+                android:contentDescription="@string/settings_screen_lock_label"
+                android:padding="16dp"
+                android:src="@drawable/ic_screen_lock_portrait_black_24dp"
+                android:text="@string/settings_screen_lock_label"
+                android:tint="@color/screen_lock"
+                android:translationZ="1dp"/>
+
+        </RelativeLayout>
 
         <!-- Elevation -->
         <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="vertical">
+            style="@style/StatRow"
+            android:background="@color/gray2"
+            android:elevation="1.8dp"
+            android:orientation="horizontal">
 
             <ImageView
                 style="@style/StatImageView"
                 android:contentDescription="@string/elevation"
                 android:src="@drawable/ic_terrain_black_24dp"/>
 
-            <LinearLayout
+            <TextView
+                android:id="@+id/elevation_label_text_view"
+                style="@style/LabelTextViewBig"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:text="@string/elevation"/>
 
-                <TextView
-                    android:id="@+id/elevation_value_text_view"
-                    style="@style/ValueTextViewBig"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:text="10000"/>
+            <TextView
+                android:id="@+id/elevation_value_text_view"
+                style="@style/ValueTextViewBig"
+                tools:text="10000"/>
 
-                <TextView
-                    android:id="@+id/elevation_unit_text_view"
-                    style="@style/UnitTextViewBig"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:text="ft"/>
-
-            </LinearLayout>
+            <TextView
+                android:id="@+id/elevation_unit_text_view"
+                style="@style/UnitTextViewBig"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="ft"/>
 
         </LinearLayout>
 
         <!-- Speed -->
         <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="vertical">
+            style="@style/StatRow"
+            android:background="@color/gray3"
+            android:elevation="1.6dp"
+            android:orientation="horizontal">
 
             <ImageView
                 style="@style/StatImageView"
                 android:contentDescription="@string/speed"
                 android:src="@drawable/speedometer"/>
 
-            <LinearLayout
+            <TextView
+                android:id="@+id/speed_label_text_view"
+                style="@style/LabelTextViewBig"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:text="@string/speed"/>
 
-                <TextView
-                    android:id="@+id/speed_value_text_view"
-                    style="@style/ValueTextViewBig"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:text="100"/>
+            <TextView
+                android:id="@+id/speed_value_text_view"
+                style="@style/ValueTextViewBig"
+                tools:text="100"/>
 
-                <TextView
-                    android:id="@+id/speed_unit_text_view"
-                    style="@style/UnitTextViewBig"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:text="mph"/>
-
-            </LinearLayout>
+            <TextView
+                android:id="@+id/speed_unit_text_view"
+                style="@style/UnitTextViewBig"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="mph"/>
 
         </LinearLayout>
 
-    </LinearLayout>
-
-    <!-- Second row -->
-    <LinearLayout
-        style="@style/StatRow"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:baselineAligned="false"
-        android:orientation="horizontal">
-
         <!-- Bearing -->
         <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="vertical">
+            style="@style/StatRow"
+            android:background="@color/gray4"
+            android:elevation="1.4dp"
+            android:orientation="horizontal">
 
             <ImageView
                 style="@style/StatImageView"
                 android:contentDescription="@string/bearing"
                 android:src="@drawable/ic_explore_black_24dp"/>
 
-            <LinearLayout
+            <TextView
+                android:id="@+id/bearing_label_text_view"
+                style="@style/LabelTextViewBig"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:text="@string/bearing"/>
 
-                <TextView
-                    android:id="@+id/bearing_value_text_view"
-                    style="@style/ValueTextViewBig"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginEnd="0dp"
-                    tools:text="359"/>
+            <TextView
+                android:id="@+id/bearing_value_text_view"
+                style="@style/ValueTextViewBig"
+                tools:text="359"/>
 
-                <TextView
-                    android:id="@+id/bearing_unit_text_view"
-                    style="@style/ValueTextViewBig"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/unit_degrees"/>
-
-            </LinearLayout>
+            <TextView
+                android:id="@+id/bearing_unit_text_view"
+                style="@style/UnitTextViewBig"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/unit_degrees"/>
 
         </LinearLayout>
 
         <!-- Accuracy -->
         <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="vertical">
+            style="@style/StatRow"
+            android:background="@color/gray5"
+            android:elevation="1.2dp"
+            android:orientation="horizontal">
 
             <ImageView
                 style="@style/StatImageView"
                 android:contentDescription="@string/accuracy"
                 android:src="@drawable/bullseye"/>
 
-            <LinearLayout
+            <TextView
+                android:id="@+id/accuracy_label_text_view"
+                style="@style/LabelTextViewBig"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:text="@string/accuracy"/>
 
-                <TextView
-                    android:id="@+id/accuracy_value_text_view"
-                    style="@style/ValueTextViewBig"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:text="10"/>
+            <TextView
+                android:id="@+id/accuracy_value_text_view"
+                style="@style/ValueTextViewBig"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="10"/>
 
-                <TextView
-                    android:id="@+id/accuracy_unit_text_view"
-                    style="@style/UnitTextViewBig"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:text="ft"/>
-
-            </LinearLayout>
+            <TextView
+                android:id="@+id/accuracy_unit_text_view"
+                style="@style/UnitTextViewBig"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                tools:text="ft"/>
 
         </LinearLayout>
 
-    </LinearLayout>
-
-    <!-- Third row -->
-    <LinearLayout
-        style="@style/StatRow"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:baselineAligned="false"
-        android:orientation="horizontal">
-
         <!-- Satellites -->
         <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="vertical">
+            style="@style/StatRow"
+            android:background="@color/gray6"
+            android:elevation="1.0dp"
+            android:orientation="horizontal">
 
             <ImageView
                 style="@style/StatImageView"
                 android:contentDescription="@string/satellites"
                 android:src="@drawable/satellite_variant"/>
 
-            <LinearLayout
+            <TextView
+                android:id="@+id/satellites_label_text_view"
+                style="@style/LabelTextViewBig"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/satellites_value_text_view"
-                    style="@style/ValueTextViewBig"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    tools:text="10"/>
-
-                <TextView
-                    android:id="@+id/satellites_unit_text_view"
-                    style="@style/UnitTextViewBig"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/sats"/>
-
-            </LinearLayout>
-
-        </LinearLayout>
-
-        <!-- Provider Status -->
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:orientation="vertical"
-            tools:ignore="UseCompoundDrawables">
-
-            <ImageView
-                style="@style/StatImageView"
-                android:contentDescription="@string/gps_status"
-                android:src="@drawable/pulse"/>
+                android:text="@string/satellites"/>
 
             <TextView
-                android:id="@+id/gps_status_value_text_view"
+                android:id="@+id/satellites_value_text_view"
                 style="@style/ValueTextViewBig"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="4dp"
-                tools:text="GPS"/>
+                tools:text="10"/>
+
+            <TextView
+                android:id="@+id/satellites_unit_text_view"
+                style="@style/UnitTextViewBig"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/sats"/>
 
         </LinearLayout>
 
     </LinearLayout>
 
-    <Switch
-        android:id="@+id/screen_lock_switch"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:switchPadding="12dp"
-        android:text="@string/settings_screen_lock_label"/>
-
-</LinearLayout>
+</FrameLayout>
