Correct icon tints for day and night modes

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -21,4 +21,6 @@
     <color name="gray14">#888888</color>
     <color name="gray15">#909090</color>
     <color name="gray16">#989898</color>
+    <color name="gray17">#A0A0A0</color>
+    <color name="gray18">#A8A8A8</color>
 </resources>
