--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -6,7 +6,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/gray7">
+    android:background="@color/gray7"
+    tools:context=".MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
