--- a/app/src/main/res/layout-land/main_activity.xml
+++ b/app/src/main/res/layout-land/main_activity.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<LinearLayout
     android:id="@+id/main_activity_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -7,96 +7,99 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/gray7"
+    android:baselineAligned="false"
+    android:orientation="horizontal"
     tools:context=".MainActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <!-- Coordinates -->
+    <RelativeLayout
+        android:id="@+id/coordinates_layout"
+        android:layout_width="0dp"
         android:layout_height="match_parent"
+        android:layout_weight=".5"
+        android:background="@color/gray1"
+        android:elevation="2.0dp"
+        android:gravity="center">
+
+        <android.support.v4.view.ViewPager
+            android:id="@+id/coordinates_view_pager"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingEnd="@dimen/activity_horizontal_margin"
+            android:paddingStart="@dimen/activity_horizontal_margin">
+
+            <com.itsronald.widget.ViewPagerIndicator
+                android:id="@+id/view_pager_indicator"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|center_horizontal"
+                android:gravity="center_vertical"
+                app:selectedDotColor="@color/gray12"
+                app:unselectedDotColor="@color/gray4"/>
+
+        </android.support.v4.view.ViewPager>
+
+        <ProgressBar
+            android:id="@+id/progress_bar"
+            android:layout_width="26dp"
+            android:layout_height="26dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentStart="true"
+            android:layout_gravity="center"
+            android:layout_margin="16dp"
+            android:indeterminateOnly="true"/>
+
+        <ImageView
+            android:id="@+id/screen_lock_switch"
+            android:layout_width="58dp"
+            android:layout_height="58dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:background="?android:attr/selectableItemBackgroundBorderless"
+            android:contentDescription="@string/settings_screen_lock_label"
+            android:padding="16dp"
+            android:src="@drawable/ic_screen_lock_portrait_black_24dp"
+            android:text="@string/settings_screen_lock_label"
+            android:tint="@color/screen_lock"
+            android:translationZ="1dp"/>
+
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight=".5"
         android:background="@color/gray1"
         android:orientation="vertical">
 
-        <!-- Coordinates -->
-        <RelativeLayout
-            android:id="@+id/coordinates_layout"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:background="@color/gray1"
-            android:elevation="2.0dp"
-            android:gravity="center">
-
-            <android.support.v4.view.ViewPager
-                android:id="@+id/coordinates_view_pager"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                android:paddingEnd="@dimen/activity_horizontal_margin"
-                android:paddingStart="@dimen/activity_horizontal_margin">
-
-                <com.itsronald.widget.ViewPagerIndicator
-                    android:id="@+id/view_pager_indicator"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="bottom|center_horizontal"
-                    android:gravity="center_vertical"
-                    app:selectedDotColor="@color/gray12"
-                    app:unselectedDotColor="@color/gray4"/>
-
-            </android.support.v4.view.ViewPager>
-
-            <ProgressBar
-                android:id="@+id/progress_bar"
-                android:layout_width="26dp"
-                android:layout_height="26dp"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentStart="true"
-                android:layout_gravity="center"
-                android:indeterminateOnly="true"
-                android:layout_margin="16dp"/>
-
-            <ImageView
-                android:id="@+id/screen_lock_switch"
-                android:layout_width="58dp"
-                android:layout_height="58dp"
-                android:layout_alignParentBottom="true"
-                android:layout_alignParentEnd="true"
-                android:background="?android:attr/selectableItemBackgroundBorderless"
-                android:contentDescription="@string/settings_screen_lock_label"
-                android:padding="16dp"
-                android:src="@drawable/ic_screen_lock_portrait_black_24dp"
-                android:text="@string/settings_screen_lock_label"
-                android:tint="@color/screen_lock"
-                android:translationZ="1dp"/>
-
-        </RelativeLayout>
-
         <!-- Elevation -->
         <LinearLayout
-            style="@style/StatRow"
+            style="@style/StatRowLandscape"
             android:background="@color/gray2"
             android:elevation="1.8dp"
             android:orientation="horizontal">
 
             <ImageView
-                style="@style/StatImageView"
+                style="@style/StatImageViewLandscape"
                 android:contentDescription="@string/elevation"
                 android:src="@drawable/ic_terrain_black_24dp"/>
 
             <TextView
                 android:id="@+id/elevation_label_text_view"
-                style="@style/LabelTextView"
+                style="@style/LabelTextViewLandscape"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/elevation"/>
 
             <TextView
                 android:id="@+id/elevation_value_text_view"
-                style="@style/ValueTextView"
+                style="@style/ValueTextViewLandscape"
                 tools:text="10000"/>
 
             <TextView
                 android:id="@+id/elevation_unit_text_view"
-                style="@style/UnitTextView"
+                style="@style/UnitTextViewLandscape"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 tools:text="ft"/>
@@ -105,31 +108,31 @@
 
         <!-- Speed -->
         <LinearLayout
-            style="@style/StatRow"
+            style="@style/StatRowLandscape"
             android:background="@color/gray3"
             android:elevation="1.6dp"
             android:orientation="horizontal">
 
             <ImageView
-                style="@style/StatImageView"
+                style="@style/StatImageViewLandscape"
                 android:contentDescription="@string/speed"
                 android:src="@drawable/speedometer"/>
 
             <TextView
                 android:id="@+id/speed_label_text_view"
-                style="@style/LabelTextView"
+                style="@style/LabelTextViewLandscape"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/speed"/>
 
             <TextView
                 android:id="@+id/speed_value_text_view"
-                style="@style/ValueTextView"
+                style="@style/ValueTextViewLandscape"
                 tools:text="100"/>
 
             <TextView
                 android:id="@+id/speed_unit_text_view"
-                style="@style/UnitTextView"
+                style="@style/UnitTextViewLandscape"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 tools:text="mph"/>
@@ -138,31 +141,31 @@
 
         <!-- Bearing -->
         <LinearLayout
-            style="@style/StatRow"
+            style="@style/StatRowLandscape"
             android:background="@color/gray4"
             android:elevation="1.4dp"
             android:orientation="horizontal">
 
             <ImageView
-                style="@style/StatImageView"
+                style="@style/StatImageViewLandscape"
                 android:contentDescription="@string/bearing"
                 android:src="@drawable/ic_explore_black_24dp"/>
 
             <TextView
                 android:id="@+id/bearing_label_text_view"
-                style="@style/LabelTextView"
+                style="@style/LabelTextViewLandscape"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/bearing"/>
 
             <TextView
                 android:id="@+id/bearing_value_text_view"
-                style="@style/ValueTextView"
+                style="@style/ValueTextViewLandscape"
                 tools:text="359"/>
 
             <TextView
                 android:id="@+id/bearing_unit_text_view"
-                style="@style/UnitTextView"
+                style="@style/UnitTextViewLandscape"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/unit_degrees"/>
@@ -171,33 +174,33 @@
 
         <!-- Accuracy -->
         <LinearLayout
-            style="@style/StatRow"
+            style="@style/StatRowLandscape"
             android:background="@color/gray5"
             android:elevation="1.2dp"
             android:orientation="horizontal">
 
             <ImageView
-                style="@style/StatImageView"
+                style="@style/StatImageViewLandscape"
                 android:contentDescription="@string/accuracy"
                 android:src="@drawable/bullseye"/>
 
             <TextView
                 android:id="@+id/accuracy_label_text_view"
-                style="@style/LabelTextView"
+                style="@style/LabelTextViewLandscape"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/accuracy"/>
 
             <TextView
                 android:id="@+id/accuracy_value_text_view"
-                style="@style/ValueTextView"
+                style="@style/ValueTextViewLandscape"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 tools:text="10"/>
 
             <TextView
                 android:id="@+id/accuracy_unit_text_view"
-                style="@style/UnitTextView"
+                style="@style/UnitTextViewLandscape"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 tools:text="ft"/>
@@ -206,4 +209,4 @@
 
     </LinearLayout>
 
-</FrameLayout>
+</LinearLayout>
