--- a/app/src/main/res/layout-large/main_activity.xml
+++ b/app/src/main/res/layout-large/main_activity.xml
@@ -72,31 +72,31 @@
 
         <!-- Elevation -->
         <LinearLayout
-            style="@style/StatRow"
+            style="@style/StatRowLarge"
             android:background="@color/gray2"
             android:elevation="1.8dp"
             android:orientation="horizontal">
 
             <ImageView
-                style="@style/StatImageView"
+                style="@style/StatImageViewLarge"
                 android:contentDescription="@string/elevation"
                 android:src="@drawable/ic_terrain_black_24dp"/>
 
             <TextView
                 android:id="@+id/elevation_label_text_view"
-                style="@style/LabelTextView"
+                style="@style/LabelTextViewLarge"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/elevation"/>
 
             <TextView
                 android:id="@+id/elevation_value_text_view"
-                style="@style/ValueTextView"
+                style="@style/ValueTextViewLarge"
                 tools:text="10000"/>
 
             <TextView
                 android:id="@+id/elevation_unit_text_view"
-                style="@style/UnitTextView"
+                style="@style/UnitTextViewLarge"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 tools:text="ft"/>
@@ -105,31 +105,31 @@
 
         <!-- Speed -->
         <LinearLayout
-            style="@style/StatRow"
+            style="@style/StatRowLarge"
             android:background="@color/gray3"
             android:elevation="1.6dp"
             android:orientation="horizontal">
 
             <ImageView
-                style="@style/StatImageView"
+                style="@style/StatImageViewLarge"
                 android:contentDescription="@string/speed"
                 android:src="@drawable/speedometer"/>
 
             <TextView
                 android:id="@+id/speed_label_text_view"
-                style="@style/LabelTextView"
+                style="@style/LabelTextViewLarge"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/speed"/>
 
             <TextView
                 android:id="@+id/speed_value_text_view"
-                style="@style/ValueTextView"
+                style="@style/ValueTextViewLarge"
                 tools:text="100"/>
 
             <TextView
                 android:id="@+id/speed_unit_text_view"
-                style="@style/UnitTextView"
+                style="@style/UnitTextViewLarge"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 tools:text="mph"/>
@@ -138,31 +138,31 @@
 
         <!-- Bearing -->
         <LinearLayout
-            style="@style/StatRow"
+            style="@style/StatRowLarge"
             android:background="@color/gray4"
             android:elevation="1.4dp"
             android:orientation="horizontal">
 
             <ImageView
-                style="@style/StatImageView"
+                style="@style/StatImageViewLarge"
                 android:contentDescription="@string/bearing"
                 android:src="@drawable/ic_explore_black_24dp"/>
 
             <TextView
                 android:id="@+id/bearing_label_text_view"
-                style="@style/LabelTextView"
+                style="@style/LabelTextViewLarge"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/bearing"/>
 
             <TextView
                 android:id="@+id/bearing_value_text_view"
-                style="@style/ValueTextView"
+                style="@style/ValueTextViewLarge"
                 tools:text="359"/>
 
             <TextView
                 android:id="@+id/bearing_unit_text_view"
-                style="@style/UnitTextView"
+                style="@style/UnitTextViewLarge"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/unit_degrees"/>
@@ -171,33 +171,33 @@
 
         <!-- Accuracy -->
         <LinearLayout
-            style="@style/StatRow"
+            style="@style/StatRowLarge"
             android:background="@color/gray5"
             android:elevation="1.2dp"
             android:orientation="horizontal">
 
             <ImageView
-                style="@style/StatImageView"
+                style="@style/StatImageViewLarge"
                 android:contentDescription="@string/accuracy"
                 android:src="@drawable/bullseye"/>
 
             <TextView
                 android:id="@+id/accuracy_label_text_view"
-                style="@style/LabelTextView"
+                style="@style/LabelTextViewLarge"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/accuracy"/>
 
             <TextView
                 android:id="@+id/accuracy_value_text_view"
-                style="@style/ValueTextView"
+                style="@style/ValueTextViewLarge"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 tools:text="10"/>
 
             <TextView
                 android:id="@+id/accuracy_unit_text_view"
-                style="@style/UnitTextView"
+                style="@style/UnitTextViewLarge"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 tools:text="ft"/>
