Give the MGRS label enough room to show

--- a/app/src/main/res/layout/mgrs_fragment.xml
+++ b/app/src/main/res/layout/mgrs_fragment.xml
@@ -9,7 +9,8 @@
         android:id="@+id/mgrs_text_view"
         style="@style/Coordinates"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         tools:text="MGRS"/>
 
     <TextView
