--- a/app/src/main/res/layout-large/position_fragment.xml
+++ b/app/src/main/res/layout-large/position_fragment.xml
@@ -6,8 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/gray7"
-    tools:context=".MainActivity">
+    android:background="@color/gray7">
 
     <LinearLayout
         android:layout_width="match_parent"
